# bevy_descendant_collector

./: .env  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  book.toml  codecov.yml  cog.toml  contributing.md  license  package.json  pnpm-lock.yaml  readme.md  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml  funding.yml
.github/workflows/: ci.yml  deploy-page.yaml  release_plz.yml  release_pr.yml
assets/models/: simple_turret.blend  simple_turret.glb
crates/bevy_armature_parser/: Cargo.toml  readme.md
crates/bevy_armature_parser/examples/: turret.rs
crates/bevy_armature_parser_derive/: Cargo.toml
crates/bevy_armature_parser_derive/src/: lib.rs
crates/bevy_descendant_collector/: Cargo.toml  readme.md
crates/bevy_descendant_collector/assets/models/: simple_turret.glb
crates/bevy_descendant_collector/examples/: turret.rs
crates/bevy_descendant_collector/src/: armature_loader.rs  find_named_entity.rs  helpers.rs  lib.rs  plugin.rs
crates/bevy_descendant_collector_derive/: Cargo.toml
crates/bevy_descendant_collector_derive/src/: lib.rs
credits/: credits.md
docs/: 01-usage.md  01_example.md  01_introduction.md  SUMMARY.md
scripts/: enable_git_hooks.sh  link_assets.sh  setup.sh
scripts/hooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
