[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/bevy_descendant_collector"]

[workspace.package]
edition = "2024"
homepage = "https://github.com/AlexAegis/bevy_descendant_collector"
repository = "https://github.com/AlexAegis/bevy_descendant_collector"
documentation = "https://github.com/AlexAegis/bevy_descendant_collector"
authors = ["alexaegis"]
license = "MIT"
readme = "readme.md"


[workspace.lints.clippy]
type_complexity = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.17", default-features = false }     # Keep it loose, don't lock on patch versions
bevy_app = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0" }
bevy-inspector-egui = { version = "0.35.0" }
