[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/bevy_descendant_collector"]

[workspace.package]
edition = "2024"
homepage = "https://github.com/AlexAegis/bevy_descendant_collector"
repository = "https://github.com/AlexAegis/bevy_descendant_collector"
documentation = "https://github.com/AlexAegis/bevy_descendant_collector"
authors = ["alexaegis"]
license = "MIT"
readme = "readme.md"


[workspace.lints.clippy]
type_complexity = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "gltf_animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_gltf",
    "bevy_log",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "file_watcher",
    "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "std",
    "tonemapping_luts",
    "x11",
    "zstd_rust",
] } # Keep it loose, don't lock on patch versions
bevy_app = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
bevy-inspector-egui = { version = "0.36.0", default-features = false, features = [
    "bevy_render",
] }
