[package]
name = "bevy_descendant_collector"
description = "Bevy crate to collect named entities into a single component"
version = "0.5.0"
readme = "readme.md"

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
dev = ["bevy/dynamic_linking"]
example = [
    "bevy/bevy_scene",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_asset",
    "bevy/bevy_render",
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/bevy_picking",
    "bevy/x11",
    "bevy/tonemapping_luts",
    "bevy/reflect_auto_register",
]

[dependencies]
bevy = { workspace = true, default-features = false }
bevy_descendant_collector_derive = { version = "0.5.0", path = "../bevy_descendant_collector_derive" }

[dev-dependencies]
bevy-inspector-egui = { workspace = true }

[[example]]
name = "turret"
required-features = ["example"]
