[package]
name = "bevy_descendant_collector"
description = "Bevy crate to collect named entities into a single component"
version = "0.5.1"
readme = "../../readme.md"

publish = true

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
dev = ["bevy/dynamic_linking"]
example = ["dev"]
test = []

[dependencies]
bevy_app = { workspace = true, default-features = false }
bevy_ecs = { workspace = true, default-features = false }
bevy_descendant_collector_derive = { version = "0.5.1", path = "../bevy_descendant_collector_derive" }

[dev-dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }

[[example]]
name = "turret"
required-features = ["example"]
