[package]
name = "bevy_descendant_collector_derive"
description = "Derive macro for bevy_descendant_collector"
version = "0.2.0"

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
bevy = { workspace = true, default-features = false }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
